2014-03-14  Héctor García  <hector@debian.org>

	Added support to defined backscroll lines for terminals. Patch from Balint Deak.
	Added support to maximize a terminal (ctrl + shift + x). Patch from Balint Deak.

2014-01-15  Héctor García  <hector@debian.org>

	Bumped version to 2.0 gtk3 support

	Changed from gdk_color_ to gdk_rgba_ functions
	Changed from gtk_color_button to gtk_color_chooser

	Change from gtk_vbox and gtk_hbox to gtk_box

	Change colour_table from GTK_TABLE to GTK_GRID

	Change table where to place terminals to grid

2014-01-15  Héctor García  <hector@debian.org>

	Bumped version to 1.3 gtk2 deprecated symbols free

	Replaced GDK_<keyname> with GDK_KEY_<keyname>

	Changed direct access to use accessor for terminal->parent

	Changed deprecated gtk_menu_bar_append with gtk_menu_shell_append

	Migrate from vte_terminal_fork_command to vte_terminal_fork_command_full to make compile against GTK 2.24

2010-01-15  Bradley Smith  <brad@brad-smith.co.uk>

	Bump to version 1.2

	Add directional focus option, and focus next window on session close.

	Redo accel group when modifier changes.

	Add directional focus.

2010-01-14  Bradley Smith  <brad@brad-smith.co.uk>

	Make sure focus is preserved when a session closes, restore back to global entry if focused window closed.

	Add call to vte_terminal_set_word_chars.

	Get rid of horrible tabs in files.

	Add columns override option.

2009-09-05  Bradley Smith  <brad@brad-smith.co.uk>

	Bump version to 1.1.

2009-09-03  Bradley Smith  <brad@brad-smith.co.uk>

	Implement .mssh_clusters config file.

2009-09-02  Bradley Smith  <brad@brad-smith.co.uk>

	Bump version to 1.0.

	Hook up the rest of the preferences dialog.

	Hook up columns spin button.

2009-08-29  Bradley Smith  <brad@brad-smith.co.uk>

	Add beginnings of columns preference.

	Hook up colour preferences.

2009-08-28  Bradley Smith  <brad@brad-smith.co.uk>

	Reduce spacing between terminals.

	Add initial gconf stuff, and hook up font preference.
