@@ -1,13 +1,17 @@
 2014-03-14  Héctor García  <hector@debian.org>
 
 	Added support to defined backscroll lines for terminals. Patch from Balint Deak.
+
 	Added support to maximize a terminal (ctrl + shift + x). Patch from Balint Deak.
+
+    Added support to change bg y fg colors on selected terminal. Patch from Balint Deak.
 
 2014-01-15  Héctor García  <hector@debian.org>
 
 	Bumped version to 2.0 gtk3 support
 
 	Changed from gdk_color_ to gdk_rgba_ functions
+
 	Changed from gtk_color_button to gtk_color_chooser
 
 	Change from gtk_vbox and gtk_hbox to gtk_box
